pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constLocalMethod.pkl
bar = 15

obj {
  const local function foo() = bar
  
  res = foo()
}
